logs/cfmr.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cfmr'...
Compiling './lib/python3.5/site-packages/cfmr/emitter.py'...
***   File "./lib/python3.5/site-packages/cfmr/emitter.py", line 33
    logger.debug(f"flushing {key}, {values}")
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cfmr/mapper.py'...
***   File "./lib/python3.5/site-packages/cfmr/mapper.py", line 20
    logger.debug(f"mapKey:{mapKey}")
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cfmr/reducer.py'...
***   File "./lib/python3.5/site-packages/cfmr/reducer.py", line 32
    logger.debug(f"allData: {allData}")
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cfmr-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
